@@ -1,3 +1,9 @@
+2006-03-30  Adam Schreiber  <sadam@clemson.edu>
+
+    * plugins/applet/seahorse-applet.c:
+    * src/seahorse-key-manager.c: Migrated from GnomeAbout
+    to GtkAbout. (Bug #336656)
+
 2006-03-29  Adam Schreiber  <sadam@clemson.edu>
 
     * libseahorse/seahorse-prefs.glade: Changed instance of
